# OpenfhePythonWrappers

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  Readme.md  setup.py
example_code/: Readme.md  cryptonet_inference.py  keygen.py
include/: ModuleDefinitions.h  TypeCasters.h  WrapperClasses.h  WrapperFunctions.h
neuralpy/: CMakeLists.txt  neuralpy.cpp
neuralpy.egg-info/: PKG-INFO  SOURCES.txt
neuralpy/include/: ModuleDefinitions.h  OpenFHEPrerequisites.h  PythonCiphertext.h  PythonContext.h  PythonKeys.h  WrapperClasses.h  WrapperFunctions.h
src/: neuralpy.cpp
